--- a/Patriam/localisation/patriam_ideas_l_english.yml
+++ b/Patriam/localisation/patriam_ideas_l_english.yml
@@ -5,3 +5,11 @@
  three_houses_desc:0 " The Three houses of Norkinia are the Regional governing bodies of the Norkinian homeland. In times of crisis, the Houses convene to attempt to solve the matters at hand. IN times of war the three houses would meet with the king in order to aproove of the war and form a strategy. "
  nord_prince_crisis:0 "Norkinian Succesion Crisis"
  nord_prince_crisis_desc:0 " With no clear successor to the Throne, Norkinian politics have been thrown into disarray as the two princes, Bjarn and Elric struggle to win the approval of the three houses in order to become King. " 
+ imperial_disintegration:0 "Imperial Disintegration"
+ imperial_disintegration_desc:0 ""
+ radical_violence:0 "Radical Violence"
+ radical_violence_desc:0 ""
+ no_support:0 "Little Popular Support"
+ no_support_desc:0 ""
+ disorganized_armies:0 "Disorganized Military"
+ disorganized_armies_desc:0 ""
